task5/tests/group/testsHW5/output/test11.out
lli: <stdin>:28:17: error: use of undefined value '%-22079'
%t1 = trunc i32 %-22079 to i8
                ^

